feat: image 경로 변경